Tests/RunCMake/Instrumentation/empty-stderr.txt
^CMake Error: +
Error: @1,1: Missing required field "version" in root object
{
\^$
